<resources>
    <string name="app_name">ShoppingList</string>
    <string name="new_category_name_label">Nazwa nowej kategorii</string>
    <string name="todo">TODO</string>
    <string name="adding_category_desc">Adding category</string>
    <string name="sending_bought_items_to_boght_list_button_desc">sending bought items to bought list</string>
    <string name="preference_file_key">pl.kamjer.shoppinglist.SharedPreferences</string>
    <string name="could_not_create_user_massage">Nie udało się zapisać użytkownika, sprawdz swoje połączenie internetowe lub nastąpił problem z serwerem, aplikacja będzie funkcjonować poprawnie ograniczając się tylko do funkcjonowania lokalnie do czasu ustanowania połączenia do serwera</string>
    <string name="loginTextLabel">Nazwa użytkownika</string>
    <string name="passwordTextLabel">Hasło</string>
    <string name="loginButtonText">Logowanie</string>
    <string name="registerButtonText">Rejestracja</string>
    <string name="user_logged_message">Użytkownik zalogowany</string>
    <string name="shopping_item_name_error_massage">Nazwa przedmiotu nie może być pusta</string>
    <string name="shopping_item_amount_type_error_massage">Wybrany typ wielkości nie może byc pusty</string>
    <string name="shopping_item_category_error_massage">Wybrana categoria nie może być pusta</string>
    <string name="amount_type_name_label">Nazwa typu</string>
    <string name="users_table_label">Użytkownicy</string>
    <string name="initializing_connection_to_server_label">Inicjalizowanie połączenia z serwerem</string>
    <string name="initializing_inner_files_label">Inicjalizowanie wewnętrznych plików</string>
    <string name="initializing_database_label">Inicjalizowanie bazy danych</string>
    <string name="wrong_user_name_or_password_label">Nazwa użytkownika i/lub hasło są nie poprawne, spróbuj ponownie</string>
    <string name="could_not_find_reason_error_massage">Nie można znaleźć powodu błędu</string>
    <string name="no_category_found_massage">Nie można znaleźć kategorii</string>
    <string name="amount_type_delete_conflict_desc_message">Wykryto, że do typu, który próbujesz usunąć przypisane są przedmioty, co chcesz z nimi zrobić?</string>
    <string name="delete_label_button">Usuń przedmioty</string>
    <string name="accept_new_amount_type_label_button">Nadaj nowy typ i usuń</string>
    <string name="cancel_label_button">Anuluj</string>
    <string name="selected_amount_type_is_null_massage">Wybrany typ nie istnieje</string>
    <string name="no_amount_type_selected_message">Nie wybrano typu</string>
    <string name="user_name_can_not_be_empty_message">Nazwa użytkownika nie może być pusta</string>
    <string name="no_such_user_message">Nie ma takiego użytkownika</string>
    <string name="item_name_edit_text_hint">Nazwa produktu</string>
    <string name="category_name_edit_text_hint">Nazwa kategorii</string>
    <string name="item_amount_edit_text_hint">Ilość do kupienia</string>
    <string name="new_item_dialog_title">Dodaj nowy produkt</string>"
    <string name="modify_item_dialog_title">Zmień istniejący produkt</string>"
    <string name="new_category_dialog_title">Dodaj nową kategorię</string>"
    <string name="modify_category_dialog_title">Zmień istniejącą kategorię</string>"
    <string name="no_such_user_exists_message">Użytkownik o takiej nazwie nie istnieje lub hasło jest nie poprawne</string>"
    <string name="no_internet_connection_message">Brak połączenia z internetem, pierwsze logowanie lub rejestracja muszą być wykonane w trybie online</string>
    <string name="add_category_tutorial_exp">Kliknij ten przycisk, aby dodać kategorię produktu, to w niej dodajesz produkty do zakupu</string>
    <string name="send_bought_items_tutorial_exp">Kliknii by odesłać kupione przedmioty do listy przedmiotów zakupionych</string>
    <string name="user_activity_tutorial_exp">Przenosi cię do okna logowania lub rejestracji</string>
    <string name="amount_type_activity_tutorial_exp">Przenosi do okna definiowania jednostek (l, kg itp.)</string>
    <string name="bought_activity_tutorial_exp">Przenosi do listy zakupionych przedmiotów</string>
    <string name="connector_indicator_tutorial_exp">Indykator połączenia z internetem, kolor czerwony oznacza brak połaczenia, kliknji by spróbować nawiązać połączenie</string>
    <string name="indicator_green_tutorial_exp">Kolor zielony oznacza że wszystko w porzadku z połączeniem</string>
    <string name="password_encryption_error_info">Nie udało się załadowac bazy danych, skontaktuj się z administratorem aplikacji</string>
    <string name="encryption_key_reset_message">Klucz szyfrowania został zresetowany z powodów bezpieczeństwa. Lokalne dane zostały utracone. Nastąpi synchronizacja z serwera.</string>
    <string name="delete_category">Usuń kategorię</string>
    <string name="edit_category">Edytuj kategorię</string>
    <string name="collapse_category">Zwiń kategorię</string>
    <string name="uncollapse_category">Rozwiń kategorię</string>
    <string name="search_hint">Wpisz szukaną frazę…</string>
    <string name="search_button_desc">Wyszukaj</string>
    <string name="with_name_search_menu_txt">Po nazwie</string>
    <string name="with_ingredients_search_menu_txt">Po składnikach</string>
    <string name="with_tags_search_menu_txt">Po tagach</string>
    <string name="with_tags_required_search_menu_txt">Po tagach (wymagane)</string>
    <string name="amount_type_text">Jednostki</string>
    <string name="bought_menu_txt">Zakupione</string>
    <string name="login_menu_txt">Logowanie</string>
    <string name="recipes_menu_txt">Przepisy</string>
    <string name="image_for_recipe_desc">Zdjęcie do przepisu</string>
    <string name="about_app">O aplikacji</string>
    <string name="recipe_picture">Zdjęcie przepisu</string>
    <string name="recipe_name">Tytuł przepisu</string>
    <string name="recipe_desc">Dłuższy opis przepisu, który może zajmować więcej miejsca…</string>
    <string name="step_number_hint">nr. kroku</string>
    <string name="step_desc_hint">Opis kroku</string>
    <string name="steps_recipe_layout_text">Kroki</string>
    <string name="ingredients_recipe_layout_text">Składniki</string>
    <string name="tags_recipe_layout_text">Wprowadź tutaj tag</string>
    <string name="tag_hint_layout">tag</string>
    <string name="my_recipes_menu_item_txt">Moje przepisy</string>
    <string name="author_recipe_label_text">Autor:</string>
    <string name="recipe_source_label_text_view">Źródło:</string>
    <string name="recipe_published_text_label">Opublikowane</string>
    <string name="no_elements_in_list_msg_text">Brak elelemtów w liście</string>
    <string name="recipe_name_label_text">Nazwa przepisu</string>
    <string name="recipe_description_label_text">Opis przepisu...</string>
    <string name="wrong_quantity_massage">Podana wartość to nie liczba</string>
    <string name="ingredient_hint">składnik</string>
    <string name="amount_hint">ilość</string>
    <string name="unit_hint">jednostka</string>
    <string name="ingredient_on_bought_shopping_list_checkbox_label">Zakupiony</string>
    <string name="no_selected_unit_exists_mssg">"Taki rodzaj jednostki nie istnieje. Wybierz odpowiednią jednostkę lub stwórz ją. "</string>
    <string name="recipe_req_validation_message">Przepis wymaga nazwy</string>
    <string name="create_tag_button_text">stwórz tag</string>
    <string name="add_step_button_text">Dodaj krok</string>
    <string name="desc_text_hint">Opis</string>
    <string name="ingredient_on_shopping_list_checkbox_label">Do kupienia</string>
</resources>