<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_step_number_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/step_number_hint"
        android:inputType="number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_step_instruction_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="start"
        android:hint="@string/step_desc_hint"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_step_btn"
        app:layout_constraintStart_toEndOf="@+id/et_step_number_id"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete_step_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/baseline_delete_forever_24"
        android:contentDescription="@string/todo"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>