<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/recipe_image_id"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/recipe_picture"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipe_name_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipe_image_id"
        app:layout_constraintTop_toTopOf="@id/recipe_image_id" />

    <TextView
        android:id="@+id/recipe_desc_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_desc"
        android:textSize="14sp"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipe_image_id"
        app:layout_constraintTop_toBottomOf="@id/recipe_name_id"
        app:layout_constraintBottom_toBottomOf="@id/recipe_image_id" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image_id">

        <ImageButton
            android:id="@+id/btn_user_edit_recipe_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/baseline_mode_24"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/btn_user_delete_recipe_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/baseline_delete_forever_24"
            android:layout_weight="1"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>