<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_search_activity_id"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="16dp">

        <Spinner
            android:id="@+id/spinner_search_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:entries="@array/search_modes" />

        <ImageButton
            android:id="@+id/recipe_menu_button"
            android:layout_width="@dimen/icon_button_min_size"
            android:layout_height="@dimen/icon_button_min_size"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple_rounded_tonal"
            android:contentDescription="@string/search_button_desc"
            android:padding="10dp"
            android:src="@drawable/baseline_more_vert_24"
            app:tint="?attr/colorOnSurface" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/search_hint"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/importIngredientsButton"
            android:layout_width="@dimen/icon_button_min_size"
            android:layout_height="@dimen/icon_button_min_size"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple_rounded_primary"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/baseline_add_24"
            android:visibility="gone"
            app:tint="?attr/colorOnPrimary" />

        <ImageButton
            android:id="@+id/imageButtonSearch"
            android:layout_width="@dimen/icon_button_min_size"
            android:layout_height="@dimen/icon_button_min_size"
            android:layout_marginStart="8dp"
            android:background="@drawable/ripple_rounded_primary"
            android:contentDescription="@string/search_button_desc"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_search"
            app:tint="?attr/colorOnPrimary" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        >

        <ProgressBar
            android:id="@+id/loadingDataProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/no_elements_in_list_msg_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>
